change version from 4.1 to 4.2 (at least for now...)

--- a/cnf/global.properties
+++ b/cnf/global.properties
@@ -1,8 +1,7 @@
-copyright = Copyright (c) OSGi Alliance (2000, 2007). All Rights Reserved.
-osgi.release.version=4.1.0.${project.build}
-core.release.version=4.1.0.${project.build}
-cmpn.release.version=4.1.0.${project.build}
-mobile.release.version=4.1.0.${project.build}
+osgi.release.version=${osgi.version.long}.${project.build}
+core.release.version=${osgi.version.long}.${project.build}
+cmpn.release.version=${osgi.version.long}.${project.build}
+mobile.release.version=${osgi.version.long}.${project.build}
 
 ees = \
  ee.minimum, \
