--- a/cnf/build.xml
+++ b/cnf/build.xml
@@ -99,11 +99,15 @@
 		-->
 
 		<!-- Create version qualifier to use in bundle versions.
-		     This must be before the include of global.properties.
+		     This must be before the include of version and global
+			 properties.
 		-->
-		<tstamp prefix="tstamp"/>
+		<tstamp prefix="tstamp">
+			<format property="YEAR" pattern="yyyy"/>
+		</tstamp>
 		<property name="project.build" value="build-${tstamp.DSTAMP}${tstamp.TSTAMP}"/>
 
+		<expand propertyFile="${workspace}/cnf/version.properties" />
 		<expand propertyFile="${workspace}/cnf/global.properties" />
 		<expand propertyFile="${project}/build.properties" />
 		<property file="${env.HOME}/osgi.properties" />
