Change to test shipped jar files instead of the internal use osgi.jar

--- a/osgi.released/build.properties
+++ b/osgi.released/build.properties
@@ -1,2 +1,7 @@
 prebuild= ${ees}, osgi, osgi.internal
 custom = true
+
+japi.osgi.core = ${replace;$(core.specs);.+;+$0}
+japi.osgi.cmpn = ${replace;$(cmpn.specs);.+;+$0}
+japi.osgi.mobile = ${replace;$(mobile.specs);.+;+$0}
+
