Added the syncdb

--- a/org.osgi.tools/build.properties
+++ b/org.osgi.tools/build.properties
@@ -5,7 +5,8 @@ jars.compile.order = osgi.tools.jar, \
   csv2xml.jar, \
   xml2mif.jar, \
   cmapps.jar, \
-  properties.jar
+  properties.jar, \
+  syncdb.jar
  
 bin.includes = osgi.tools.jar, \
   ${p}.console.jar, \
@@ -14,7 +15,8 @@ bin.includes = osgi.tools.jar, \
   csv2xml.jar, \
   xml2mif.jar, \
   cmapps.jar, \
-  properties.jar
+  properties.jar, \
+  syncdb.jar
 
 expand.properties.jar = ${p}.properties
 
@@ -43,6 +45,8 @@ expand.csv2xml.jar = org.osgi.tools.csv2xml
 expand.fileinstall.jar = ${p}.fileinstall
 
 expand.cmapps.jar = ${p}.apps
+
+expand.syncdb.jar = ${p}.syncdb
 
 btool.analyse=false
 verbose=false
