bug 463: fix from Tom Watson which I verified

--- a/osgi.test/build.properties
+++ b/osgi.test/build.properties
@@ -96,7 +96,7 @@ include.osgi.ri-tck.zip= \
  [about.html=about-zip.html], \
  NOTICE=NOTICE.txt, \
  target/build.xml=target/build.xml, \
- target/osgi.properties=target/osgi.properties, \
+ target/configuration/config.ini=target/configuration/config.ini, \
  target/policy=target/policy, \
  target/keystore=target/keystore, \
  target/delivered=target/delivered, \
@@ -106,7 +106,7 @@ include.osgi.ri-tck.zip= \
  director/mobile.script=director/mobile.script, \
  director/link.script=director/link.script, \
  director/Director.launch=director/Director.launch, \
- director/osgi.properties=director/osgi.properties, \
+ director/configuration/config.ini=director/configuration/config.ini, \
  director/test.properties=director/test.properties, \
  osgi.min.jar, \
  servlet.jar, \
@@ -133,13 +133,13 @@ include.osgi.ri-tck.zip= \
 include.osgi.develop.zip = \
  [about.html=about-zip.html], \
  NOTICE=NOTICE.txt, \
- target/osgi.properties=target/osgi.properties, \
+ target/configuration/config.ini=target/configuration/config.ini, \
  target/policy=target/policy, \
  target/keystore=target/keystore, \
  target/delivered=target/delivered, \
  target/Target.launch=target/Target.launch, \
  director/Director.launch=director/Director.launch, \
- director/osgi.properties=director/osgi.properties, \
+ director/configuration/config.ini=director/configuration/config.ini, \
  director/test.properties=director/test.properties, \
  testcond.jar, \
  osgi.target.jar, \
@@ -170,11 +170,11 @@ include.osgi.mobile.tck.zip= \
  NOTICE=NOTICE.txt, \
  doc/tck-manual.pdf=doc/tck-manual.pdf, \
  target/build.xml=target/build.xml, \
- target/osgi.properties=target/osgi.properties, \
+ target/configuration/config.ini=target/configuration/config.ini, \
  target/policy=target/policy, \
  target/keystore=target/keystore, \
  director/build.xml=director/build.xml, \
- director/osgi.properties=director/osgi.properties, \
+ director/configuration/config.ini=director/configuration/config.ini, \
  testcond.jar, \
  osgi.min.jar, \
  servlet.jar, \
@@ -217,11 +217,11 @@ include.osgi.jsr291.tck.zip= \
  NOTICE=NOTICE.txt, \
  doc/tck-manual.pdf=doc/tck-manual.pdf, \
  target/build.xml=target/build.xml, \
- target/osgi.properties=target/osgi.properties, \
+ target/configuration/config.ini=target/configuration/config.ini, \
  target/policy=target/policy, \
  target/keystore=target/keystore, \
  director/build.xml=director/build.xml, \
- director/osgi.properties=director/osgi.properties, \
+ director/configuration/config.ini=director/configuration/config.ini, \
  testcond.jar, \
  osgi.min.jar, \
  servlet.jar, \
