--- a/osgi.test/director/configuration/config.ini
+++ b/osgi.test/director/configuration/config.ini
@@ -26,3 +26,11 @@ org.osgi.test.compliance.applicant=OSGi Service Platform, Release 4 Reference Im
 mail.host=localhost
 
 org.osgi.test.testcase.timeout=120000
+
+# hack to workaround native awt/swt conflicting with system.in and the console
+osgi.console.blockOnReady=true
+eclipse.ignoreApp=true
+osgi.bundles.defaultStartLevel=1
+osgi.startLevel=1
+osgi.console=2201
+osgi.noShutdown=true
