--- a/xmlns/.settings/org.eclipse.core.resources.prefs
+++ b/xmlns/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,3 @@
-#Tue Apr 04 12:36:08 CEST 2006
+#Mon Nov 05 08:17:27 EST 2007
 eclipse.preferences.version=1
-encoding//metatype/metatype.xsd=UTF-8
-encoding//scr/scr.xsd=UTF8
 encoding/<project>=UTF-8
