Added the TCK manual to the properties. This need to change anyway for R4nxt but this is done as a reminder. It is kind of weird not to have this manual in the TCK zips

--- a/osgi.test/build.properties
+++ b/osgi.test/build.properties
@@ -94,6 +94,7 @@ expand.osgi.mobile.tests.jar = org.osgi.tools.group
 before.osgi.ri-tck.zip = crossref
 include.osgi.ri-tck.zip= \
  [about.html=about-zip.html], \
+ doc/tck-manual.pdf=doc/tck-manual.pdf, \
  NOTICE=NOTICE.txt, \
  target/build.xml=target/build.xml, \
  target/configuration/config.ini=target/configuration/config.ini, \
@@ -133,6 +134,7 @@ include.osgi.ri-tck.zip= \
 include.osgi.develop.zip = \
  [about.html=about-zip.html], \
  NOTICE=NOTICE.txt, \
+ doc/tck-manual.pdf=doc/tck-manual.pdf, \
  target/configuration/config.ini=target/configuration/config.ini, \
  target/policy=target/policy, \
  target/keystore=target/keystore, \
