tidy up and harmonize with other projects: remove PDE refs, update copyright date, set svn properties, add missing package.html

--- a/org.osgi.service.discovery/.classpath
+++ b/org.osgi.service.discovery/.classpath
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry sourcepath="/osgi.released/ee.minimum.jar" kind="lib" path="/osgi.released/ee.minimum.jar"/>
 	<classpathentry kind="src" path="/org.osgi.framework"/>
-	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry kind="lib" path="/osgi.released/ee.minimum.jar" sourcepath="/ee.minimum"/>
 	<classpathentry kind="output" path="src"/>
 </classpath>
