Added the org.osgi.service.command/threadio packages

--- a/cnf/global.properties
+++ b/cnf/global.properties
@@ -12,6 +12,7 @@ specs = \
  org.osgi.framework, \
  org.osgi.service.application, \
  org.osgi.service.cm, \
+ org.osgi.service.command, \
  org.osgi.service.component, \
  org.osgi.service.condpermadmin, \
  org.osgi.service.deploymentadmin, \
@@ -30,6 +31,7 @@ specs = \
  org.osgi.service.prefs, \
  org.osgi.service.provisioning, \
  org.osgi.service.startlevel, \
+ org.osgi.service.threadio, \
  org.osgi.service.upnp, \
  org.osgi.service.url, \
  org.osgi.service.useradmin, \
@@ -162,6 +164,7 @@ cmpn.specs = \
  org.osgi.service.application, \
  org.osgi.service.cm, \
  org.osgi.service.component, \
+ org.osgi.service.command, \
  org.osgi.service.deploymentadmin, \
  org.osgi.service.device, \
  org.osgi.service.event, \
@@ -172,6 +175,7 @@ cmpn.specs = \
  org.osgi.service.monitor, \
  org.osgi.service.prefs, \
  org.osgi.service.provisioning, \
+ org.osgi.service.threadio, \
  org.osgi.service.upnp, \
  org.osgi.service.useradmin, \
  org.osgi.service.wireadmin, \
