--- a/org.osgi.service.threadio/build.xml
+++ b/org.osgi.service.threadio/build.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project name="project" default="publish"> 
-	<import file="../build/build.xml"/>
+	<import file="../cnf/build.xml"/>
 </project>
