--- a/org.osgi.service.threadio/.classpath
+++ b/org.osgi.service.threadio/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="/osgi.released/ee.foundation.jar" sourcepath="/osgi.released/ee.foundation.jar"/>
+	<classpathentry kind="lib" path="/osgi.released/ee.minimum.jar" sourcepath="/osgi.released/ee.minimum.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
