--- a/osgi/.classpath
+++ b/osgi/.classpath
@@ -1,36 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry path="/org.osgi.framework" kind="src" exported="true"/>
-	<classpathentry path="/org.osgi.service.cm" kind="src" exported="true"/>
-	<classpathentry path="/org.osgi.service.device" kind="src" exported="true"/>
-	<classpathentry path="/org.osgi.service.http" kind="src" exported="true"/>
-	<classpathentry path="/org.osgi.service.io" kind="src" exported="true"/>
-	<classpathentry path="/org.osgi.service.log" kind="src" exported="true"/>
-	<classpathentry path="/org.osgi.service.metatype" kind="src" exported="true"/>
-	<classpathentry path="/org.osgi.service.packageadmin" kind="src" exported="true"/>
-	<classpathentry path="/org.osgi.service.permissionadmin" kind="src" exported="true"/>
-	<classpathentry path="/org.osgi.service.prefs" kind="src" exported="true"/>
-	<classpathentry path="/org.osgi.service.provisioning" kind="src" exported="true"/>
-	<classpathentry path="/org.osgi.service.upnp" kind="src" exported="true"/>
-	<classpathentry path="/org.osgi.service.url" kind="src" exported="true"/>
-	<classpathentry path="/org.osgi.service.useradmin" kind="src" exported="true"/>
-	<classpathentry path="/org.osgi.service.wireadmin" kind="src" exported="true"/>
-	<classpathentry path="/org.osgi.util.measurement" kind="src" exported="true"/>
-	<classpathentry path="/org.osgi.util.position" kind="src" exported="true"/>
-	<classpathentry path="/org.osgi.util.tracker" kind="src" exported="true"/>
-	<classpathentry path="/org.osgi.util.xml" kind="src" exported="true"/>
-	<classpathentry path="/org.osgi.service.startlevel" kind="src" exported="true"/>
-	<classpathentry path="/org.osgi.service.component" kind="src" exported="true"/>
-	<classpathentry path="/org.osgi.service.event" kind="src" exported="true"/>
-	<classpathentry path="/org.osgi.service.condpermadmin" kind="src" exported="true"/>
-	<classpathentry path="/org.osgi.service.application" kind="src" exported="true"/>
-	<classpathentry path="/org.osgi.service.monitor" kind="src" exported="true"/>
-	<classpathentry path="/org.osgi.util.mobile" kind="src" exported="true"/>
-	<classpathentry path="/org.osgi.service.deploymentadmin" kind="src" exported="true"/>
-	<classpathentry path="/org.osgi.util.gsm" kind="src" exported="true"/>
-	<classpathentry path="/org.osgi.service.power" kind="src" exported="true"/>
-	<classpathentry path="/org.osgi.application" combineaccessrules="false" kind="src" exported="true"/>
-	<classpathentry path="/org.osgi.service.obr" combineaccessrules="false" kind="src" exported="true"/>
-	<classpathentry path="/info.dmtree" combineaccessrules="false" kind="src" exported="true"/>
-	<classpathentry path="" kind="output"/>
+	<classpathentry exported="true" kind="src" path="/org.osgi.framework"/>
+	<classpathentry exported="true" kind="src" path="/org.osgi.service.cm"/>
+	<classpathentry exported="true" kind="src" path="/org.osgi.service.device"/>
+	<classpathentry exported="true" kind="src" path="/org.osgi.service.http"/>
+	<classpathentry exported="true" kind="src" path="/org.osgi.service.io"/>
+	<classpathentry exported="true" kind="src" path="/org.osgi.service.log"/>
+	<classpathentry exported="true" kind="src" path="/org.osgi.service.metatype"/>
+	<classpathentry exported="true" kind="src" path="/org.osgi.service.packageadmin"/>
+	<classpathentry exported="true" kind="src" path="/org.osgi.service.permissionadmin"/>
+	<classpathentry exported="true" kind="src" path="/org.osgi.service.prefs"/>
+	<classpathentry exported="true" kind="src" path="/org.osgi.service.provisioning"/>
+	<classpathentry exported="true" kind="src" path="/org.osgi.service.upnp"/>
+	<classpathentry exported="true" kind="src" path="/org.osgi.service.url"/>
+	<classpathentry exported="true" kind="src" path="/org.osgi.service.useradmin"/>
+	<classpathentry exported="true" kind="src" path="/org.osgi.service.wireadmin"/>
+	<classpathentry exported="true" kind="src" path="/org.osgi.util.measurement"/>
+	<classpathentry exported="true" kind="src" path="/org.osgi.util.position"/>
+	<classpathentry exported="true" kind="src" path="/org.osgi.util.tracker"/>
+	<classpathentry exported="true" kind="src" path="/org.osgi.util.xml"/>
+	<classpathentry exported="true" kind="src" path="/org.osgi.service.startlevel"/>
+	<classpathentry exported="true" kind="src" path="/org.osgi.service.component"/>
+	<classpathentry exported="true" kind="src" path="/org.osgi.service.event"/>
+	<classpathentry exported="true" kind="src" path="/org.osgi.service.condpermadmin"/>
+	<classpathentry exported="true" kind="src" path="/org.osgi.service.application"/>
+	<classpathentry exported="true" kind="src" path="/org.osgi.service.monitor"/>
+	<classpathentry exported="true" kind="src" path="/org.osgi.util.mobile"/>
+	<classpathentry exported="true" kind="src" path="/org.osgi.service.deploymentadmin"/>
+	<classpathentry exported="true" kind="src" path="/org.osgi.util.gsm"/>
+	<classpathentry exported="true" kind="src" path="/org.osgi.service.power"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/org.osgi.application"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/org.osgi.service.obr"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/info.dmtree"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/org.osgi.service.command"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/org.osgi.service.threadio"/>
+	<classpathentry kind="output" path=""/>
 </classpath>
