--- a/org.osgi.service.threadio/.classpath
+++ b/org.osgi.service.threadio/.classpath
@@ -2,5 +2,5 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="/osgi.released/ee.minimum.jar" sourcepath="/osgi.released/ee.minimum.jar"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="output" path="src"/>
 </classpath>
