--- a/org.osgi.test.tool/build.properties
+++ b/org.osgi.test.tool/build.properties
@@ -3,8 +3,8 @@ jars.compile.order = osgi.target.jar,\
 include.osgi.director.jar = about.html, \
 							NOTICE=NOTICE.txt, \
 							netscape/LICENSE=../licensed/licenses/NPL-1.0.txt, \
-							netscape/ifc11.jar=../licensed/jar/ifc11.jar, \
-                            org/osgi/test/director/www/osgi.target.jar=osgi.target.jar
+							netscape/ifc11.jar=../licensed/repo/netscape.ifc/netscape.ifc-1.1.0.jar, \
+                            org/osgi/test/director/www/osgi.target.jar=${target-dir}/osgi.target.jar
 expand.osgi.director.jar  =  org.osgi.test.applet.*, \
   org.osgi.test.director.*, \
   [org.osgi.test.service], \
