--- a/org.osgi.tools/build.properties
+++ b/org.osgi.tools/build.properties
@@ -26,7 +26,9 @@ expand.osgi.tools.jar = ${p}.csv2xml, ${p}.jc, ${p}.xmldoclet, ${p}.jar2xml, \
   org.apache.bcel.generic, \
   org.apache.bcel.util, \
   org.apache.bcel.verifier, \
-  org.osgi.test.script
+  org.osgi.test.script, \
+  org.osgi.tools.cross
+  
   
 expand.xml2mif.jar = ${p}.xml2mif
   
