--- a/osgi.test/build.properties
+++ b/osgi.test/build.properties
@@ -8,7 +8,6 @@ jars.compile.order = \
   osgi.cmpn.tests.jar, \
   osgi.mobile.impls.jar, \
   osgi.mobile.tests.jar, \
-  osgi.develop.zip, \
   osgi.ri-tck.zip, \
   osgi.mobile.tck.zip, \
   osgi.mobile.ri.zip, \
@@ -24,7 +23,6 @@ bin.includes = osgi.min.jar, \
   osgi.cmpn.tests.jar, \
   osgi.mobile.impls.jar, \
   osgi.mobile.tests.jar, \
-  osgi.develop.zip, \
   osgi.ri-tck.zip
   
 
@@ -37,8 +35,8 @@ prebuild =  osgi, \
 
 # Used to run the director in a minimum OSGi framework
 include.osgi.min.jar = \
- org.osgi.impl.service.http.jar, \
- org.osgi.impl.service.log.jar, \
+ ${target-dir}/org.osgi.impl.service.http.jar, \
+ ${target-dir}/org.osgi.impl.service.log.jar, \
  NOTICE=NOTICE.txt, \
  about.html
 expand.osgi.min.jar = org.osgi.tools.group, \
@@ -49,8 +47,8 @@ expand.osgi.min.jar = org.osgi.tools.group, \
  [org.osgi.tools.command]
 
 # Refimpl. Temporary until we do Mobile
-include.osgi.refimpl.jar = ${replace;${impls};$;.jar}, \
- apache/servlet.jar=../licensed/jar/servlet.jar, \
+include.osgi.refimpl.jar = ${replace;${impls};(.+);${target-dir}/$1.jar}, \
+ apache/servlet.jar=../licensed/repo/org.osgi.impl.bundle.servlet/org.osgi.impl.bundle.servlet-2.1.0.jar, \
  apache/LICENSE=../licensed/licenses/ASL-2.0.txt, \
  NOTICE=NOTICE.txt, \
  about.html
@@ -59,34 +57,34 @@ expand.osgi.refimpl.jar = org.osgi.tools.group, \
 
  
 # Core
-core.impls.jars=${replace;${core.impls};$;.jar}
-core.tests.jars=${replace;${core.tests};$;.jar}
-include.osgi.core.impls.jar = ${replace;${core.impls};$;.jar}
+core.impls.jars=${replace;${core.impls};(.+)$;{target-dir}/$1.jar}
+core.tests.jars=${replace;${core.tests};(.+)$;${target-dir}/$1.jar}
+include.osgi.core.impls.jar = ${replace;${core.impls};(.+);${target-dir}/$1.jar}
 expand.osgi.core.impls.jar = org.osgi.tools.group
-include.osgi.core.tests.jar = ${replace;${core.tests};$;.jar}
+include.osgi.core.tests.jar = ${replace;${core.tests};(.+);${target-dir}/$1.jar}
 expand.osgi.core.tests.jar = org.osgi.tools.group
 
 # Compendium
-cmpn.impls.jars=${replace;${cmpn.impls};$;.jar}
-cmpn.tests.jars=${replace;${cmpn.tests};$;.jar}
-include.osgi.cmpn.impls.jar = ${replace;${cmpn.impls};$;.jar}, \
- apache/servlet.jar=../licensed/jar/servlet.jar, \
+cmpn.impls.jars=${replace;${cmpn.impls};(.+);${target-dir}/$1.jar}
+cmpn.tests.jars=${replace;${cmpn.tests};(.+);${target-dir}/$1.jar}
+include.osgi.cmpn.impls.jar = ${replace;${cmpn.impls};(.+);${target-dir}/$1.jar}, \
+ apache/servlet.jar=../licensed/repo/org.osgi.impl.bundle.servlet/org.osgi.impl.bundle.servlet-2.1.0.jar, \
  apache/LICENSE=../licensed/licenses/ASL-2.0.txt, \
  NOTICE=NOTICE.txt, \
  about.html
 expand.osgi.cmpn.impls.jar = org.osgi.tools.group, \
  [javax.microedition.io], [javax.microedition.pki]
-include.osgi.cmpn.tests.jar = ${replace;${cmpn.tests};$;.jar}
+include.osgi.cmpn.tests.jar = ${replace;${cmpn.tests};(.+);${target-dir}/$1.jar}
 expand.osgi.cmpn.tests.jar = org.osgi.tools.group
 
 
 # Mobile
-mobile.impls.jars=${replace;${mobile.impls};$;.jar}
-mobile.tests.jars=${replace;${mobile.tests};$;.jar}
-include.osgi.mobile.impls.jar = ${replace;${mobile.impls};$;.jar}
+mobile.impls.jars=${replace;${mobile.impls};(.+);${target-dir}/$1.jar}
+mobile.tests.jars=${replace;${mobile.tests};(.+);${target-dir}/$1.jar}
+include.osgi.mobile.impls.jar = ${replace;${mobile.impls};(.+);${target-dir}/$1.jar}
 expand.osgi.mobile.impls.jar = org.osgi.tools.group, \
  [javax.microedition.io], [javax.microedition.pki]
-include.osgi.mobile.tests.jar = ${replace;${mobile.tests};$;.jar}
+include.osgi.mobile.tests.jar = ${replace;${mobile.tests};(.+);${target-dir}/$1.jar}
 expand.osgi.mobile.tests.jar = org.osgi.tools.group
 
 
@@ -96,7 +94,7 @@ include.osgi.ri-tck.zip= \
  [about.html=about-zip.html], \
  doc/tck-manual.pdf=doc/tck-manual.pdf, \
  NOTICE=NOTICE.txt, \
- target/build.xml=target/build.xml, \
+ build.xml=build.xml, \
  target/configuration/config.ini=target/configuration/config.ini, \
  target/policy=target/policy, \
  target/keystore=target/keystore, \
@@ -109,52 +107,28 @@ include.osgi.ri-tck.zip= \
  director/Director.launch=director/Director.launch, \
  director/configuration/config.ini=director/configuration/config.ini, \
  director/test.properties=director/test.properties, \
- osgi.min.jar, \
- servlet.jar, \
- osgi.target.jar, \
- testcond.jar, \
- org.osgi.test.cases.testtool.jar, \
- org.osgi.impl.framework.eclipse.jar, \
- osgi.jar, \
- org.osgi.tools.console.jar, \
- osgi.director.jar, \
- osgi.core.jar, \
- osgi.core.impls.jar, \
- osgi.core.tests.jar, \
+ ${target-dir}/osgi.min.jar, \
+ servlet.jar=../licensed/repo/org.osgi.impl.bundle.servlet/org.osgi.impl.bundle.servlet-2.1.0.jar, \
+ ${target-dir}/osgi.target.jar, \
+ ${target-dir}/testcond.jar, \
+ ${target-dir}/org.osgi.test.cases.testtool.jar, \
+ ${target-dir}/org.osgi.impl.framework.eclipse.jar, \
+ ${target-dir}/osgi.jar, \
+ ${target-dir}/org.osgi.tools.console.jar, \
+ ${target-dir}/osgi.director.jar, \
+ ${target-dir}/osgi.core.jar, \
+ ${target-dir}/osgi.core.impls.jar, \
+ ${target-dir}/osgi.core.tests.jar, \
  doc/osgi.core.html, \
- osgi.cmpn.jar, \
- osgi.cmpn.impls.jar, \
- osgi.cmpn.tests.jar, \
+ ${target-dir}/osgi.cmpn.jar, \
+ ${target-dir}/osgi.cmpn.impls.jar, \
+ ${target-dir}/osgi.cmpn.tests.jar, \
  doc/osgi.cmpn.html, \
- osgi.mobile.jar, \
- osgi.mobile.impls.jar, \
- osgi.mobile.tests.jar, \
+ ${target-dir}/osgi.mobile.jar, \
+ ${target-dir}/osgi.mobile.impls.jar, \
+ ${target-dir}/osgi.mobile.tests.jar, \
  doc/osgi.mobile.html
 
-include.osgi.develop.zip = \
- [about.html=about-zip.html], \
- NOTICE=NOTICE.txt, \
- doc/tck-manual.pdf=doc/tck-manual.pdf, \
- target/configuration/config.ini=target/configuration/config.ini, \
- target/policy=target/policy, \
- target/keystore=target/keystore, \
- target/delivered=target/delivered, \
- target/Target.launch=target/Target.launch, \
- director/Director.launch=director/Director.launch, \
- director/configuration/config.ini=director/configuration/config.ini, \
- director/test.properties=director/test.properties, \
- testcond.jar, \
- osgi.target.jar, \
- org.osgi.impl.framework.eclipse.jar, \
- osgi.jar, \
- osgi.core.jar, \
- osgi.cmpn.jar, \
- osgi.mobile.jar, \
- osgi.min.jar, \
- servlet.jar, \
- osgi.director.jar, \
- org.osgi.tools.console.jar, \
- osgi.refimpl.jar
 
 crossref = core, cmpn, mobile
 
@@ -171,30 +145,30 @@ include.osgi.mobile.tck.zip= \
  LICENSE=LICENSE.jsr232.tck.txt, \
  NOTICE=NOTICE.txt, \
  doc/tck-manual.pdf=doc/tck-manual.pdf, \
- target/build.xml=target/build.xml, \
+ build.xml=build.xml, \
  target/configuration/config.ini=target/configuration/config.ini, \
  target/policy=target/policy, \
  target/keystore=target/keystore, \
  director/build.xml=director/build.xml, \
  director/configuration/config.ini=director/configuration/config.ini, \
- testcond.jar, \
- osgi.min.jar, \
- servlet.jar, \
- osgi.target.jar, \
- org.osgi.impl.framework.eclipse.jar, \
- osgi.jar, \
- osgi.director.jar, \
+ ${target-dir}/testcond.jar, \
+ ${target-dir}/osgi.min.jar, \
+ servlet.jar=../licensed/repo/org.osgi.impl.bundle.servlet/org.osgi.impl.bundle.servlet-2.1.0.jar, \
+ ${target-dir}/osgi.target.jar, \
+ ${target-dir}/org.osgi.impl.framework.eclipse.jar, \
+ ${target-dir}/osgi.jar, \
+ ${target-dir}/osgi.director.jar, \
  target/delivered=target/delivered, \
  director/core.script=director/core.script, \
  director/mobile.script=director/mobile.script, \
- osgi.core.jar, \
- osgi.core.tests.jar, \
- osgi.mobile.jar, \
- osgi.mobile.tests.jar, \
+ ${target-dir}/osgi.core.jar, \
+ ${target-dir}/osgi.core.tests.jar, \
+ ${target-dir}/osgi.mobile.jar, \
+ ${target-dir}/osgi.mobile.tests.jar, \
  doc/osgi.core.html=doc/osgi.core.html, \
  doc/osgi.mobile.html=doc/osgi.mobile.html, \
- ${replace;${filterout;${core.tests};.*test\.cases\.signature\..*};.+;../$0/src}, \
- ${replace;${filterout;${mobile.tests};.*test\.cases\.signature\..*};.+;../$0/src}, \
+ ${replace;${filterout;${core.tests};.*test\.cases\.signature\..*};(.+);../$0/src}, \
+ ${replace;${filterout;${mobile.tests};.*test\.cases\.signature\..*};(.+);../$0/src}, \
  ../org.osgi.test.cases.signature/src
 
 
@@ -204,9 +178,9 @@ include.osgi.mobile.ri.zip= \
  [about.html=about-zip.html], \
  LICENSE-RI=LICENSE.jsr232.ri.txt, \
  NOTICE=NOTICE.txt, \
- org.osgi.impl.framework.eclipse.jar, \
- osgi.core.impls.jar, \
- osgi.mobile.impls.jar
+ ${target-dir}/org.osgi.impl.framework.eclipse.jar, \
+ ${target-dir}/osgi.core.impls.jar, \
+ ${target-dir}/osgi.mobile.impls.jar
 
 # Core (JSR 291) TCK
 # For JSR 291 we need a subset. The following 
@@ -224,19 +198,19 @@ include.osgi.jsr291.tck.zip= \
  target/keystore=target/keystore, \
  director/build.xml=director/build.xml, \
  director/configuration/config.ini=director/configuration/config.ini, \
- testcond.jar, \
- osgi.min.jar, \
- servlet.jar, \
- osgi.target.jar, \
- org.osgi.impl.framework.eclipse.jar, \
- osgi.jar, \
- osgi.director.jar, \
+ ${target-dir}/testcond.jar, \
+ ${target-dir}/osgi.min.jar, \
+ servlet.jar=../licensed/repo/org.osgi.impl.bundle.servlet/org.osgi.impl.bundle.servlet-2.1.0.jar, \
+ ${target-dir}/osgi.target.jar, \
+ ${target-dir}/org.osgi.impl.framework.eclipse.jar, \
+ ${target-dir}/osgi.jar, \
+ ${target-dir}/osgi.director.jar, \
  target/delivered=target/delivered, \
  director/core.script=director/core.script, \
- osgi.core.jar, \
- osgi.core.tests.jar, \
+ ${target-dir}/osgi.core.jar, \
+ ${target-dir}/osgi.core.tests.jar, \
  doc/osgi.core.html=doc/osgi.core.html, \
- ${replace;${filterout;${core.tests};.*test\.cases\.signature\..*};.+;../$0/src}, \
+ ${replace;${filterout;${core.tests};.*test\.cases\.signature\..*};(.+);../$0/src}, \
  ../org.osgi.test.cases.signature/src
 
 
@@ -246,8 +220,8 @@ include.osgi.jsr291.ri.zip= \
  [about.html=about.html], \
  LICENSE-RI=../licensed/licenses/EPL-1.0.txt, \
  NOTICE=NOTICE.txt, \
- org.osgi.impl.framework.eclipse.jar, \
- osgi.core.impls.jar
+ ${target-dir}/org.osgi.impl.framework.eclipse.jar, \
+ ${target-dir}/osgi.core.impls.jar
 
 btool.sources=false
 
